--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<div class="container">
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
-						<h1>A 17 Year Old Java Developer&acute;s Portfolio</h1>
+						<h1>A 17 Year Old Software Developer&acute;s Portfolio</h1>
 					</div>
 				</div>
 			</div>
