--- a/work_1.html
+++ b/work_1.html
@@ -115,7 +115,7 @@
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
 							<!-- Name of Project -->
-						<h1> Name of Project </h1>
+						<h1> Form Hunter </h1>
 					</div>
 				</div>
 			</div>
@@ -188,10 +188,10 @@
 
 						<div class="row animate-box row-bottom-padded-sm">
 							<div class="col-md-3">
-								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 4</span> Website</h3>
+								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 4</span> Website and Github Source</h3>
 							</div>
 							<div class="col-md-9">
-								<p><a href="http://freehtml5.co" target="_blank">http://freehtml5.co</a></p>
+								<p><a href="https://github.com/xnathangithub/Form-Hunter" target="_blank">https://github.com/xnathangithub/Form-Hunter</a></p>
 							</div>
 						</div>
 
